@@ -20,6 +20,9 @@ file-share-properties.ui : file-share-properties.glade
 appdir = $(datadir)/gnome-user-share
 app_DATA=dav_user_2.0.conf dav_user_2.2.conf dav_groupfile file-share-properties.ui
 
+dav_user_2.2.conf: dav_user_2.2.conf.in
+	sed "s,@DATADIR@,$(datadir)," dav_user_2.2.conf.in > $@
+
 install-data-local:
 if GCONF_SCHEMAS_INSTALL
 	-GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
@@ -36,9 +39,10 @@ endif
 EXTRA_DIST = $(schema_in_files) \
 	$(app_DATA)		\
 	$(desktop_in_files)	\
+	dav_user_2.2.conf.in	\
 	gnome-user-share.desktop.in.in \
 	file-share-properties.glade
 
-CLEANFILES = $(desktop_DATA) $(autostart_DATA) file-share-properties.ui
+CLEANFILES = $(desktop_DATA) $(autostart_DATA) file-share-properties.ui dav_user_2.2.conf
 
 DISTCLEANFILES = $(schema_DATA) 
