@@ -1,3 +1,11 @@
+2008-03-25  Bastien Nocera  <hadess@hadess.net>
+
+	* data/Makefile.am: Generate the dav_user_2.2.conf
+	file so the location of the dav_groupfile is the
+	one used in the installation
+	* data/dav_user_2.2.conf: Rename to...
+	* data/dav_user_2.2.conf.in: ... this
+
 2008-03-08  Jaap Haitsma  <jaap@haitsma.org>
 
 	* configure.in:
